updated announcement view

--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingPart.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingPart.jade
@@ -6,41 +6,11 @@ mixin AppAttachmentBlock(item, pictureHref, i)
 autoCount = self.getAutoGradeCount()
 studentAnnouncements = self.getItems()
 selectedIndex = autoCount ? null : 0
-gradingMapping = self.getMapping()
 gradingStyle = self.getGradingStyle()
-getGrade = function(value){return GradingStyler.getLetterByGrade(value, gradingMapping, gradingStyle)}
 getGradeNumber = function(value){return GradingStyler.getGradeNumberValue(value, gradingMapping, gradingStyle)}
 
 .silver-panel.student-announcements-top-panel
-    .auto-grade-buttons.right
-        +ActionLinkButton('announcement', 'applyAutoGrade', self.getAnnouncementId())(disabled = autoCount == 0).special-button2.green
-            =Msg.Auto_grade
-        +ActionLinkButton('announcement', 'applyManualGrade', self.getAnnouncementId())(disabled = autoCount == 0).special-button2.red
-            =Msg.Grade_manually
-    //.grades-info.right
-        TABLE
-            TR
-                TD
-                    span#graded-count=self.getGradedStudentCount()
-                    ='/' + studentAnnouncements.length
-                TD#class-avg=getGrade(self.getClassAvg())
-            TR
-                TD.small=Msg.Students_graded(studentAnnouncements.length)
-                TD.small=Msg.Class_average
-    div(data-tooltip=Msg.Class_Avg).class-avg=getGrade(self.getClassAvg())
-    div(class=self.isShowToStudents() ? "" : "not-show", data-value="#{self.isShowToStudents()}").show-student-grades
-        .chlk-pop-up-container.popup-top
-            .pop-up-triangle
-            .show-student-grades-container
-                .text=Msg.Show_grades_to_students
-                .show-grade-checkbox-container
-                    +ActionForm('announcement', 'setShowGradesToStudents')
-                        +SlideCheckbox("showGradesToStudents", self.isShowToStudents())
-                        +Hidden('showToStudents', self.isShowToStudents()).show-grades-input
-                        +Hidden('announcementId', self.getAnnouncementId())
-    div(data-tooltip=self.getGradedStudentCount() + '/' + studentAnnouncements.length + " " + Msg.Graded).graded-student
-        div(style="width:#{self.getGradedWidth()};").graded-bg
-    .clear-right
+    +RenderWith(self.getModel(), chlk.templates.announcement.StudentAnnouncementsTpl)
 +ListView(self)(
     selectedIndex = selectedIndex
 ).grades-individual.people-list
