--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -333,7 +333,7 @@ TEXTAREA.animated-textarea{
   @include border-radius(6px);
   background: #EEE;
   border-color: #B7B7B7;
-  @include box-shadow(0 2px 6px 0px #989897);
+  @include box-shadow(0 0 4px 0px #888);
   text-shadow: white 0px 1px 1px;
   padding: 7px;
   z-index: 100;
@@ -367,7 +367,7 @@ TEXTAREA.animated-textarea{
 
   &.popup-top{
     #pop-up-triangle, .pop-up-triangle{
-      bottom: -12px;
+      bottom: -10px;
       @include transform(rotate(180deg));
     }
   }
