added advanced options to new Item form

--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -60,8 +60,32 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
                 placeholder=Msg.Due_date,
                 class="validate[required]"
             )#expiresdate
-        SPAN#reminders-button.small-gray-link=Msg.Reminder(true)
-        .reminders-container.x-hidden
+        .max-score-container
+            input(placeholder=Msg.Max_score, class="validate[required]")
+            .question-mark ?
+        .advanced-options
+            .advanced-options-btn.title.btn Advanced options...
+            .separator.x-hidden
+            .advanced-options-container.x-hidden
+                .weight-multiplier.new-input-container
+                    .title Weight Multiplier
+                    input(placeholder="1.00")
+                    .question-mark ?
+                .weight-addition.new-input-container
+                    .title Weight Addition
+                    input(placeholder="1.00")
+                    .question-mark ?
+                .check-box-container
+                    .title Hide from Students
+                    +SlideCheckbox('hidefromstudents', true, false)
+                    .question-mark ?
+                .check-box-container
+                    .title Can drop student score
+                    +SlideCheckbox('candropstudentscore', true, false)
+                    .question-mark ?
+
+        //SPAN#reminders-button.small-gray-link=Msg.Reminder(true)
+        //.reminders-container.x-hidden
             .reminders
                 reminders = announcement.getAnnouncementReminders() || [];
                 each reminder in reminders
