--- a/Chalkable.Web/assets/jade/activities/apps/app-general-info.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-general-info.jade
@@ -14,3 +14,12 @@
                 else
                     if self.isApproved()
                         +ActionLinkButton('apps', 'goLive', self.draftAppId).special-button.blue-button Go Live
+    .app-installs
+        .header App Installs
+
+        .graph
+    .app-store-balance
+    .app-reviews
+        .header Reviews
+
+
