--- a/Chalkable.Web/assets/sass/partials/main/developer/_app_general.scss
+++ b/Chalkable.Web/assets/sass/partials/main/developer/_app_general.scss
@@ -38,6 +38,13 @@ BODY {
                     }
                   }
                 }
+                .app-installs{
+                  .header{
+                    text-align: center;
+                    font-size: 14px;
+                    margin-top: 40px;
+                  }
+                }
               }
             }
         }
