--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -22,6 +22,7 @@
 @import "partials/main/feed/_list";
 @import "partials/main/announcement/_form";
 @import "partials/main/announcement/_view";
+@import "partials/main/announcement/_add_standards_dialog";
 @import "partials/main/calendar/_base_calendar";
 @import "partials/main/calendar/_calendar";
 @import "partials/main/calendar/_announcement";
