--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -69,6 +69,7 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
             .question-mark ?
         .advanced-options
             .advanced-options-btn.title.btn Advanced options...
+                span.triangle-icon
             .separator.x-hidden
             .advanced-options-container.x-hidden
                 .weight-multiplier.new-input-container
