--- a/Chalkable.Web/assets/sass/partials/main/announcement/_add_standards_dialog.scss
+++ b/Chalkable.Web/assets/sass/partials/main/announcement/_add_standards_dialog.scss
@@ -3,7 +3,7 @@
 
     &.add-standards{
       background-color: #eaeaea;
-      height: 470px;
+      min-height: 470px;
       width: 974px;
       @include border-radius(5px);
       .header{
@@ -26,7 +26,37 @@
         }
         .buttons-container{
           text-align: right;
-          
+          margin: 10px 35px 10px 0px;
+
+          .special-button2{
+            >span{
+              >span{
+                >button{
+                  font-size: 14px;
+                  padding-left: 6px;
+                  padding-right: 6px;
+                }
+              }
+            }
+            &.cancel{
+              border: 1px solid #a4a4a4;
+              margin-right: 10px;
+              @include border-radius(4px);
+              @include background(linear-gradient(top, #ffffff,#dadada));
+              @include box-shadow(rgba(0, 0, 0, 0.4) 0 0 3px, white 0px 1px 0px 0px inset);
+
+              min-height: 30px;
+              span{
+                min-height: 30px;
+                span{
+                  min-height: 30px;
+                  button{
+                    color: #3a3a3a;
+                  }
+                }
+              }
+            }
+          }
         }
       }
     }
