--- a/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
@@ -41,7 +41,8 @@ mixin SummaryInfo(presentCount, allStudentsCount)
             items = self.getItems()
             .top.panel-bg
                 +SummaryInfo(self.getPresentStudents().length, items.length)
-                BUTTON(href="javascript:", name="submitType", type="submit", id="submit-attendance-button").chlk-button.action-button.message-button.blue-gradient-btn POST IT
+                if self.canPost()
+                    BUTTON(href="javascript:", name="submitType", type="submit", id="submit-attendance-button").chlk-button.action-button.message-button.blue-gradient-btn POST IT
                 if(self.getItems().length > 0)
                     +ActionLinkWithPrepend('attendance', 'markAll',
                         [selectedId.valueOf(), self.getDate().toStandardFormat()].concat(additionalParams)
