--- a/Chalkable.Web/assets/sass/partials/main/_attendance.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_attendance.scss
@@ -133,6 +133,10 @@ BODY {
               .now-chart-block{
                 width: 550px;
                 margin-left: 20px;
+
+                .chart-bg2{
+                  width: 550px;
+                }
               }
 
               .attendance-students{
