--- a/Chalkable.Web/assets/jade/activities/attendance/AdminSummaryMp.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/AdminSummaryMp.jade
@@ -1,8 +1,8 @@
 valuesEnum = chlk.models.attendance.AttendanceTypeEnum
 .big-chart-containner
-    +AdminAtteddanceChart(self.getAttendanceStats())
+    +AdminAttendanceChart(self.getAttendanceStats())
 .big-chart-containner
-    +AdminAtteddanceMpChart(self.getAttendanceStats())
+    +AdminAttendanceMpChart(self.getAttendanceStats())
 .attendance-students.mp-students
     if self.getAbsentAndLateStudents() && self.getAbsentAndLateStudents().length
         +StudentsTpl(self.getAbsentAndLateStudents(), Msg.Students_with_attendance_issues, 3).attendance-mp
