--- a/Chalkable.Web/assets/jade/activities/attendance/StudentDayAttendance.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/StudentDayAttendance.jade
@@ -12,8 +12,8 @@ typesEnum = chlk.models.attendance.AttendanceTypeEnum
     +ActionForm('attendance', 'setAttendanceForList')
         if attendances.length
             +Hidden('date', attendances[0].getDate().format('mm-dd-yy'))
-            +Hidden('classPersonIds', '')
-            +Hidden('classPeriodIds', '')
+            +Hidden('personIds', '')
+            +Hidden('classIds', '')
             +Hidden('attendanceTypes', '')
             +Hidden('attReasons', '')
             +Hidden('controller', self.getController())
@@ -35,12 +35,13 @@ typesEnum = chlk.models.attendance.AttendanceTypeEnum
                     .reasons-container
                         +RenderWith(self.getModel(), chlk.templates.attendance.StudentReasonsComboTpl)
             each item in attendances
-                currentReasons = self.getReasonsForType(item.getType())
+                currentReasons = self.getReasonsForType(item.getLevel())
                 div(
-                    data-classPeriodId = item.getClassPeriodId().valueOf(),
-                    data-classPersonId = item.getClassPersonId().valueOf()
+                    data-classPeriodId = item.getClassId().valueOf(),
+                    data-classPersonId = student.getId().valueOf()
                 ).row
-                    .name-container #{self.getSerial(item.getPeriod().getOrder())} - #{item.getClassName()}
+                    //.name-container #{self.getSerial(item.getPeriod().getOrder())} - #{item.getClassName()}
+                    .name-container #{item.getClassName()}
                     .type-container
                         if(canEdit)
                             +Select('attendanceTypes').attendance-type-select.grey-select
@@ -48,7 +49,6 @@ typesEnum = chlk.models.attendance.AttendanceTypeEnum
                                 +TypeOption(typesEnum.LATE.valueOf(), item)
                                 +TypeOption(typesEnum.EXCUSED.valueOf(), item)
                                 +TypeOption(typesEnum.PRESENT.valueOf(), item)
-                                +TypeOption(typesEnum.NA.valueOf(), item)
                         else
                             |#{self.getTypeName(item.getType())}
                     .reasons-container
