added tooltips for new item icons

--- a/Chalkable.Web/assets/sass/partials/main/announcement/_form.scss
+++ b/Chalkable.Web/assets/sass/partials/main/announcement/_form.scss
@@ -334,9 +334,12 @@ BODY {
                       position: relative;
                       top: 5px;
                       margin-bottom: 5px;
+                      margin-left: 6px;
                     }
                     .question-mark{
-                      margin-left: 4px !important;
+                      margin-left: 5px !important;
+                      position: relative;
+                      top: -3px;
                     }
                   }
                   .title{
