--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -75,19 +75,19 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
                 .weight-multiplier.new-input-container
                     .title Weight Multiplier
                     input(placeholder="1.00")
-                    .question-mark ?
+                    div(data-tooltip="For this item to be part of the marking period average, a number greater than 0 must be entered.").question-mark ?
                 .weight-addition.new-input-container
                     .title Weight Addition
                     input(placeholder="1.00")
-                    .question-mark ?
+                    div(data-tooltip="Enter a number here if points are to be added to each student’s grade for this item.").question-mark ?
                 .check-box-container
                     .title Hide from Students
                     +SlideCheckbox('hidefromstudents', true, false)
-                    .question-mark ?
+                    div(data-tooltip="This is will hide the item from students").question-mark ?
                 .check-box-container
                     .title Can drop student score
                     +SlideCheckbox('candropstudentscore', true, false)
-                    .question-mark ?
+                    div(data-tooltip="Check this box if a score may be dropped for this item").question-mark ?
 
         //SPAN#reminders-button.small-gray-link=Msg.Reminder(true)
         //.reminders-container.x-hidden
