--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -65,7 +65,7 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
                 class="validate[required]"
             )#expiresdate
         .max-score-container
-            input(placeholder=Msg.Max_score, class="validate[required]")
+            input(name="maxscore", placeholder=Msg.Max_score, class="validate[required]", value=announcement.getMaxScore())
             .question-mark ?
         .advanced-options
             .advanced-options-btn.title.btn Advanced options...
@@ -74,19 +74,19 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
             .advanced-options-container.x-hidden
                 .weight-multiplier.new-input-container
                     .title Weight Multiplier
-                    input(placeholder="1.00")
+                    input(name='weightmultiplier', placeholder="1.00", value=announcement.getWeightMultiplier())
                     div(data-tooltip="For this item to be part of the marking period average, a number greater than 0 must be entered.").question-mark ?
                 .weight-addition.new-input-container
                     .title Weight Addition
-                    input(placeholder="1.00")
+                    input(name='weightaddition', placeholder="1.00", value=announcement.getWeightAddition())
                     div(data-tooltip="Enter a number here if points are to be added to each student’s grade for this item.").question-mark ?
                 .check-box-container
                     .title Hide from Students
-                    +SlideCheckbox('hidefromstudents', true, false)
+                    +SlideCheckbox('hidefromstudents', announcement.isAbleHideFromStudents(), false)
                     div(data-tooltip="This is will hide the item from students").question-mark ?
                 .check-box-container
                     .title Can drop student score
-                    +SlideCheckbox('candropstudentscore', true, false)
+                    +SlideCheckbox('candropstudentscore', announcement.isAbleDropStudentScore(), false)
                     div(data-tooltip="Check this box if a score may be dropped for this item").question-mark ?
 
         //SPAN#reminders-button.small-gray-link=Msg.Reminder(true)
