--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -48,7 +48,7 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
         +TextArea(id="content",name="content",placeholder=isAnnouncement ? "Message" : "Assignment")=announcement.getContent()
         .add-standards
             .standards-list
-            .title CLICK TO ADD STANDARDS
+            .title=Msg.Click_to_add_standard
             +ActionLink('announcement', 'addStandards').add-standards-btn.x-hidden
         .drop-down-container
         input(type="submit",id="list-last-button",value="listLast", name="submitType", class='x-hidden validate-skip')
@@ -65,29 +65,29 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
                 class="validate[required]"
             )#expiresdate
         .max-score-container
-            input(name="maxscore", placeholder=Msg.Max_score, class="validate[required]", value=announcement.getMaxScore())
+            input(name="maxscore", placeholder=Msg.Max_score + ' 100', class="validate[required]", value=announcement.getMaxScore())
             .question-mark ?
         .advanced-options
-            .advanced-options-btn.title.btn Advanced options...
+            .advanced-options-btn.title.btn=Msg.Advanced_options
                 span.triangle-icon
             .separator.x-hidden
             .advanced-options-container.x-hidden
                 .weight-multiplier.new-input-container
-                    .title Weight Multiplier
+                    .title=Msg.Weight_Multiplier
                     input(name='weightmultiplier', placeholder="1.00", value=announcement.getWeightMultiplier())
-                    div(data-tooltip="For this item to be part of the marking period average, a number greater than 0 must be entered.").question-mark ?
+                    div(data-tooltip="").question-mark ?
                 .weight-addition.new-input-container
-                    .title Weight Addition
+                    .title=Msg.Weight_Addition
                     input(name='weightaddition', placeholder="1.00", value=announcement.getWeightAddition())
-                    div(data-tooltip="Enter a number here if points are to be added to each student’s grade for this item.").question-mark ?
+                    div(data-tooltip="").question-mark ?
                 .check-box-container
-                    .title Hide from Students
+                    .title=Msg.Hide_from_Students
                     +SlideCheckbox('hidefromstudents', announcement.isAbleHideFromStudents(), false)
-                    div(data-tooltip="This is will hide the item from students").question-mark ?
+                    div(data-tooltip="").question-mark ?
                 .check-box-container
-                    .title Can drop student score
+                    .title=Msg.Can_drop_student_score
                     +SlideCheckbox('candropstudentscore', announcement.isAbleDropStudentScore(), false)
-                    div(data-tooltip="Check this box if a score may be dropped for this item").question-mark ?
+                    div(data-tooltip="").question-mark ?
 
         //SPAN#reminders-button.small-gray-link=Msg.Reminder(true)
         //.reminders-container.x-hidden
